# data

./: .env.example  .gitignore  Makefile  README.md  base.docker-compose.yml  catalog.json  docker-compose.indexers.yml  docker-compose.yml  graph.gpickle  graph_summary.json  prometheus.yml  run_results.json  semantic_manifest.json
extractors/: .dockerignore  .env.example  Dockerfile  README.md  folder_contents.txt  main.py  pyproject.toml  requirements.txt
extractors/abi/: TreasuryProxy.json  Vault.json
extractors/configs/: arbitrum_mainnet.yaml  arbitrum_sepolia.yaml  base_mainnet.yaml  base_sepolia.yaml  eth_mainnet.yaml  optimism_mainnet.yaml
extractors/src/: clean.py  constants.py  extract.py  insert.py
indexers/: .dockerignore  .env.example  Dockerfile  Dockerfile.listener  Dockerfile.multiarch  README.md  docker-compose.yml  entrypoint.sh  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  requirements_listener.txt  supervisord.conf
indexers/arbitrum-mainnet/: .env.example  Dockerfile  package.json  squidgen.yaml
indexers/arbitrum-sepolia/: Dockerfile  commands.json  package-lock.json  package.json  squid.yaml  squidgen.yaml
indexers/base-goerli/: .env.example  Dockerfile  package.json  squid.yaml  squidgen.yaml
indexers/base-mainnet/: .env.example  squid.yaml  squidgen.yaml
indexers/base-mainnet-lt/: Dockerfile  package-lock.json  package.json  squid.yaml  squidgen.yaml
indexers/base-mainnet-vaults/: package-lock.json  package.json  squid.yaml  squidgen.yaml
indexers/base-sepolia/: .env.example  Dockerfile  squid.yaml  (+2 more)
(+5665 files in other folders)
