[project]
name = "extractors"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryo==0.3.0",
    "duckdb>=1.1.3",
    "maturin>=1.7.7",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "polars-lts-cpu>=1.16.0",
    "pyarrow>=18.1.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "synthetix>=0.1.21",
]
